# language-formatters-pre-commit-hooks

./: .activate.sh  .black.toml  .coveragerc  .deactivate.sh  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  Dockerfile  Makefile  README.md  README.rst  mypy.ini  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: automerge.yaml  build.yaml  bump-releases.yaml  bump_external_releases.py  codeql-analysis.yml  dependabot-auto-merge.yml  publish.yaml
language_formatters_pre_commit_hooks/: __init__.py  pre_conditions.py  pretty_format_golang.py  pretty_format_ini.py  pretty_format_java.py  pretty_format_kotlin.py  pretty_format_rust.py  pretty_format_toml.py  pretty_format_yaml.py  utils.py
maci_pre_commit_hooks/: __init__.py  pretty_format_golang.py  pretty_format_java.py  pretty_format_kotlin.py  pretty_format_yaml.py
test-data/pretty_format_golang/: invalid.go  not-pretty-formatted_fixed.go
test-data/pretty_format_ini/: issue_99.ini  not-pretty-formatted.ini  not-valid-file.ini  pretty-formatted.ini
test-data/pretty_format_java/: invalid.java  not-pretty-formatted.java  not-pretty-formatted_fixed.java  not-pretty-formatted_fixed_palantir.java  pretty-formatted.java  pretty-formatted_palantir.java
test-data/pretty_format_kotlin/: Invalid.kt  NotPrettyFormatted.kt  NotPrettyFormattedFixedKtfmtGoogle.kt  invalid.kt  valid.kt
test-data/pretty_format_rust/invalid/src/: main.rs
test-data/pretty_format_rust/not-pretty-formatted/: Cargo.toml
test-data/pretty_format_rust/not-pretty-formatted/src/: main.rs
test-data/pretty_format_rust/not-pretty-formatted_subdir/: .gitignore  Cargo.toml
test-data/pretty_format_rust/valid/src/: main.rs
test-data/pretty_format_toml/: indent2-pretty-formatted.toml  indent4-pretty-formatted.toml  inline-comment-1spaces-pretty-formatted.toml  inline-comment-2spaces-pretty-formatted.toml  invalid.toml  no-sort-pretty-formatted.toml  not-pretty-formatted.toml  not-pretty-formatted_fixed.toml  pretty-formatted.toml  sorted-pretty-formatted.toml
test-data/pretty_format_yaml/: ansible-vault.yaml  explicit-start-pretty-formatted.yaml  multi-doc-not-pretty-formatted.yaml  multi-doc-not-pretty-formatted_fixed.yaml  multi-doc-pretty-formatted.yaml  multi-doc-with-empty-document-inside.yaml  not-pretty-formatted.yaml  not-pretty-formatted_fixed.yaml  not-valid-file.yaml  offset2_indent4_not-pretty-formatted.yaml  offset2_indent4_pretty-formatted.yaml  preserve-quotes-pretty-formatted.yaml  primitive.yaml
tests/: __init__.py  conftest.py  pre_conditions_test.py  pretty_format_golang_test.py  pretty_format_ini_test.py  pretty_format_java_test.py  pretty_format_kotlin_test.py  pretty_format_rust_test.py  pretty_format_toml_test.py  pretty_format_yaml_test.py  utils_test.py
