[bdist_wheel]
universal = True

[metadata]
author = Samuele Maci
author_email = macisamuele@gmail.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = List of pre-commit hooks meant to format your source code.
name = language_formatters_pre_commit_hooks
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/macisamuele/language-formatters-pre-commit-hooks
version = 1.3.2

[options]
install_requires =
    decorator
    requests
    ruamel.yaml
    six
    toml
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*
