[bdist_wheel]
universal = True

[metadata]
author = Samuele Maci
author_email = macisamuele@gmail.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = List of pre-commit hooks meant to format your source code.
name = language_formatters_pre_commit_hooks
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/macisamuele/language-formatters-pre-commit-hooks
version = 2.2.0

[options]
install_requires =
    iniparse
    packaging
    requests
    ruamel.yaml
    toml-sort
    tomlkit
packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[options.package_data]
language_formatters_pre_commit_hooks =
    google_java_formatter.version
    ktlint.version
