[bdist_wheel]
universal = True

[metadata]
author = Samuele Maci
author_email = macisamuele@gmail.com
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
description = List of pre-commit hooks meant to format your source code.
name = language_formatters_pre_commit_hooks
license = Apache License 2.0
license_file = LICENSE
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/macisamuele/language-formatters-pre-commit-hooks
version = 2.16.0

[options]
install_requires =
    config_formatter
    packaging
    requests
    ruamel.yaml
    setuptools
    toml-sort>=0.22.0  # 0.22.0 introduces specific prettification configs (ie. SortConfiguration)
python_requires = >=3.10

packages = find:

[options.packages.find]
exclude =
    tests*
    testing*

[options.package_data]
language_formatters_pre_commit_hooks =
    google_java_formatter.version
    palantir.version
    ktlint.version
    ktfmt.version
